--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -13,5 +13,25 @@
             "email": "Enviar e-mail para o Search & AI Meetup BR",
             "meetup": "Acessar o grupo do Search & AI Meetup BR no Meetup"
         }
+    },
+    "about": {
+        "titleLine1": "Bem-vindo(a) ao",
+        "titleLine2": "Search & AI",
+        "highlight": "Meetup BR",
+        "description": "Somos uma comunidade criada para aproximar profissionais, estudantes e pesquisadores interessados em Search, IA e tecnologias relacionadas. Nosso objetivo é construir um espaço aberto, colaborativo e acessível, onde o conhecimento circula e cresce com a participação de todos.",
+        "cards": {
+            "explore": {
+                "title": "Explorar Search & IA",
+                "description": "Discutir sistemas de busca, ranking, recuperação de informação, embeddings, LLMs e como a IA vem transformando produtos cada vez mais."
+            },
+            "share": {
+                "title": "Compartilhar e aprender",
+                "description": "Trocar aprendizados e experiências reais do mercado e da pesquisa, criando um ambiente de troca dinâmica."
+            },
+            "connect": {
+                "title": "Conectar pessoas",
+                "description": "Promover o networking e a construção de uma comunidade técnica ativa por meio de encontros presenciais e online."
+            }
+        }
     }
 }
