Update CTA speaker call copy

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,7 +78,7 @@
         "ctaSlides": {
             "speaker": {
                 "title": "Become a Speaker",
-                "description": "Do you have an interesting talk, a success case, or a cool idea about Search & AI? Submit your proposal and help shape our upcoming meetups.",
+                "description": "Do you have an interesting event, a success story, or a cool idea about Search, Data, or Artificial Intelligence? Submit your proposal and help shape our upcoming meetups.",
                 "buttonText": "I want to speak"
             },
             "local": {
