--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -78,7 +78,7 @@
         "ctaSlides": {
             "speaker": {
                 "title": "Seja um Palestrante",
-                "description": "Tem um evento interessante, um case de sucesso ou uma ideia legal sobre Search & IA? Envie sua proposta e ajude a construir os próximos meetups.",
+                "description": "Tem um evento interessante, um case de sucesso ou uma ideia legal sobre Busca, Dados ou Inteligência Artificial? Envie sua proposta e ajude a construir os próximos meetups.",
                 "buttonText": "Quero palestrar"
             },
             "local": {
